--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
 - '8.9.0'
 
 before_install:
-- npm install -g typescript
+- npm install -g typescript grunt-cli
+- npm run grunt
 
 script:
 - npm test
