--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: node_js
-
 node_js:
-- '8.9.0'
-
+- 8.9.0
+addons:
+  ssh_known_hosts: carlescapell.me
 before_install:
+- openssl aes-256-cbc -K $encrypted_c21df3ee71eb_key -iv $encrypted_c21df3ee71eb_iv -in deploy-key.enc -out deploy-key -d
 - npm install -g typescript grunt-cli
 - npm install
-
+- bash .scripts/intsall.sh
 install:
 - npm run grunt
-
 script:
 - npm test
+after_success:
+- bash .scripts/deploy.sh
