--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ node_js:
 addons:
   ssh_known_hosts: carlescapell.me
 before_install:
-- openssl aes-256-cbc -K $encrypted_c21df3ee71eb_key -iv $encrypted_c21df3ee71eb_iv -in deploy-key.enc -out deploy-key -d
+- openssl aes-256-cbc -K $encrypted_7ed930b610ca_key -iv $encrypted_7ed930b610ca_iv
+  -in deploy-key.enc -out deploy-key -d
 - npm install -g typescript grunt-cli
 - npm install
 - bash .scripts/intsall.sh
