--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-sass": "^1.0.0",
     "json-query": "^2.2.2",
     "twig": "^1.10.5",
     "typescript": "^2.6.2",
