--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
 before_install:
 - openssl aes-256-cbc -K $encrypted_7ed930b610ca_key -iv $encrypted_7ed930b610ca_iv
   -in deploy-key.enc -out deploy-key -d
-- npm install -g typescript grunt-cli
+- npm install -g typescript grunt-cli node-sass
 - npm install
 - bash .scripts/install.sh
 install:
