--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-sass": "^1.0.0",
     "json-query": "^2.2.2",
     "twig": "^1.10.5",
     "typescript": "^2.6.2",
@@ -44,7 +42,9 @@
     "chai-http": "^3.0.0",
     "grunt": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^2.0.0",
     "grunt-ts": "^6.0.0-beta.10",
     "mocha": "^3.1.2",
     "mocha-typescript": "^1.0.11",
