Add cache folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,11 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/node,macos,webstorm
 
+# Node Sass cache
+.sass-cache
+
+# TypeScript cache
+.tscache
+
+# Distributable files
 dist
